<resources>
    <string name="app_name">Scripture Reading App</string>

    <string name="title_activity_main">MainActivity</string>

    <!-- For the schedule creation activity -->
    <string name="creator_header">Create a New Schedule</string>
    <string name="creator_name">Give Your Schedule a Name:</string>
    <string name="creator_startDate">Starting Date</string>
    <string name="creator_startDateText">Pick Your Start Date:</string>
    <string name="creator_endDateText">Pick Your End Date:</string>
    <string name="creator_startLocation">Pick your starting Book and Chapter:</string>
    <string name="creator_create">Create</string>
    <string name="creator_endLocation">Pick your ending Book and Chapter:</string>
    <string name="enable_notifi">Enable Notifications</string>
    <string name="disable_notifi">Disable Notifications</string>
    <string name="notifyCall">Control Notifications</string>

    <string-array name="bomBooks">
        <item>1 Nephi</item>
        <item>2 Nephi</item>
        <item>Jacob</item>
        <item>Enos</item>
        <item>Jarom</item>
        <item>Omni</item>
        <item>Words of Mormon</item>
        <item>Mosiah</item>
        <item>Alma</item>
        <item>Helaman</item>
        <item>3 Nephi</item>
        <item>4 Nephi</item>
        <item>Mormon</item>
        <item>Ether</item>
        <item>Moroni</item>
    </string-array>
    <string name="title_activity_result">ResultActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_schedule_viewer">ScheduleViewer</string>
    <string name="action_settings">Settings</string>
    <string name="schedView">Schedule View</string>
    <string name="dayRead">Today\'s Reading is:</string>
    <string name="title_activity_enable_notifications">EnableNotifications</string>
    <string name="notifaction_header">Select when you would like to be reminded to read</string>
    <string name="explainView">Each card below is one day\'s reading. When you check it off, those chapters will be marked as completed.
    They will not appear the next time you view this schedule.</string>

</resources>
