<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/scrollView1"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_schedule_creator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.group4.readingapp.scripturereadingapp.ScheduleCreator">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp"
            android:id="@+id/schedNameText"
            android:textSize="16sp"
            android:text="@string/creator_name" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@id/schedNameText"
            android:layout_alignRight="@+id/textView2"
            android:layout_alignEnd="@+id/textView2"
            android:id="@+id/schedNameInput"
            android:textSize="14sp"
            android:textStyle="normal|italic"
            android:hint="Name" />

        <TextView
            android:text="@string/creator_startDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/schedNameInput"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp"
            android:id="@+id/schedStartText"
            android:textSize="16sp" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startDatePicker"
            android:calendarViewShown="false"
            android:scaleX=".8"
            android:scaleY=".8"
            android:layout_marginTop="39dp"
            android:layout_below="@+id/schedNameInput"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/creator_endDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/schedEndDate"
            android:textSize="16sp"
            android:layout_alignBottom="@+id/startDatePicker"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endDatePicker"
            android:calendarViewShown="false"
            android:scaleX=".8"
            android:scaleY=".8"
            android:layout_alignTop="@+id/schedEndDate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/endDatePicker"
            android:paddingTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creator_startLocation"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:id="@+id/startLocText"/>


            <Spinner
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/bomBooks"
                android:id="@+id/schedBooksStart"
                
                />


            <Spinner
                android:id="@+id/schedChaptersStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/creator_endLocation"
                android:id="@+id/endLocText"
                android:textSize="16sp"/>

            <Spinner
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/bomBooks"
                android:id="@+id/schedBooksEnd"
                />


            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/schedChaptersEnd"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/creator_create"
                android:id="@+id/createButton"
                android:onClick="createSchedule"
                />




        </LinearLayout>

    </RelativeLayout>

</ScrollView>